<resources>
    <string name="app_name">GovtechRoomBooking</string>
    <string name="room_booking_title">Book a Room</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_room">Rooms</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_not_available">Not Available</string>
    <string name="level_display_format">Level %1$s</string>
    <string name="capacity_display_format">%1$s Pax</string>
    <string name="lbl_menu_scan">Scan</string>
    <string name="lbl_btn_reset">Reset</string>
    <string name="lbl_btn_apply">Apply</string>
    <string name="lbl_sort_location">Location</string>
    <string name="lbl_sort_capacity">Capacity</string>
    <string name="lbl_sort_available">Availability</string>
    <string name="lbl_back_to_home">Back to Home</string>
    <string name="lbl_no_result">No Result</string>
    <string name="lbl_no_result_msg">No results can be found based on your selection, please reselect another options.</string>
    <string name="lbl_error_msg">Would you like to retry?</string>
    <string name="lbl_retry_btn">Retry</string>
    <string name="lbl_cancel_btn">Cancel</string>
    <string name="lbl_ok_btn">OK</string>
</resources>
