<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_standard_padding"
    android:paddingTop="@dimen/activity_standard_padding"
    android:paddingEnd="@dimen/activity_standard_padding"
    tools:context=".activities.MainActivity"
    >

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_date"
        android:textColor="@color/lighterGrey"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textViewDateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gunmetal"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate"
        tools:text="3rd Jan 2019"
        />

    <View
        android:id="@+id/dateDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightestGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDateDisplay"
        />

    <View
        android:id="@+id/dateGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/textViewDate"
        app:layout_constraintBottom_toBottomOf="@id/dateDivider"
        />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/lbl_time"
        android:textColor="@color/lighterGrey"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateDivider"
        />

    <TextView
        android:id="@+id/textViewTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gunmetal"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTime"
        tools:text="12:30 PM"
        />

    <View
        android:id="@+id/timeDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightestGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTimeDisplay"
        />

    <View
        android:id="@+id/timeGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/textViewTime"
        app:layout_constraintBottom_toBottomOf="@id/timeDivider"
        />

    <TextView
        android:id="@+id/textViewRoomsTextDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_larger"
        android:text="@string/lbl_room"
        android:textColor="@color/lighterGrey"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeDivider"
        />

    <TextView
        android:id="@+id/textViewSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_sort"
        android:drawablePadding="4dp"
        android:text="@string/lbl_sort"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="@id/textViewRoomsTextDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewRoomsTextDisplay"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRoomsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_standard_padding"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSort"
        tools:listitem="@layout/item_room"
        />
</androidx.constraintlayout.widget.ConstraintLayout>